--- a/index.html
+++ b/index.html
@@ -9,6 +9,30 @@
     <script src="./javascript/FileSaver.min.js"></script>
     <script src="./javascript/josephus.js"></script>
     <script src="./javascript/index.js"></script>
+    <style>
+    #nodes {
+        position: relative;
+        width: 328px;
+        height: 328px;
+        border-radius: 50%;
+        padding: 0 0 42px 0;
+        /*background-color: #ccc;*/
+    }
+
+    .item {
+        font-size: 18px;
+        display: inline-block;
+        width: 32px;
+        height: 32px;
+        line-height: 32px;
+        border-radius: 50%;
+        background-color: orange;
+        color: #fff;
+        text-align: center;
+        margin: 3px;
+        position: absolute;
+    }
+    </style>
 </head>
 
 <body>
@@ -82,6 +106,14 @@
         <h3 class="box-title">动画</h3>
         <div class="box-content" id="nodes"></div>
     </div>
+    <script>
+    // $(function() {
+
+
+
+
+    // })
+    </script>
 </body>
 
 </html>
