--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <style>
     #nodes {
         position: relative;
-        width: 328px;
-        height: 328px;
+        width: 96px;
+        height: 96px;
         border-radius: 50%;
         padding: 0 0 42px 0;
         /*background-color: #ccc;*/
@@ -98,7 +98,7 @@
     <div class="box result">
         <h3 class="box-title">结果</h3>
         <div class="box-content">
-            <span class="txt">自杀次序:</span>
+            <span class="txt">出列次序:</span>
             <div id="result" class="order"></div>
         </div>
     </div>
@@ -106,14 +106,6 @@
         <h3 class="box-title">动画</h3>
         <div class="box-content" id="nodes"></div>
     </div>
-    <script>
-    // $(function() {
-
-
-
-
-    // })
-    </script>
 </body>
 
 </html>
